--- a/src/components/atoms/Toggle/styles.module.scss
+++ b/src/components/atoms/Toggle/styles.module.scss
@@ -35,7 +35,7 @@
 
 input {
   &:checked + .slider {
-    background-color: #2196f3;
+    background-color: $primary-color;
   }
 
   &:checked + .slider:before {
