--- a/src/components/templates/TogglesListTemplate/styles.module.scss
+++ b/src/components/templates/TogglesListTemplate/styles.module.scss
@@ -7,4 +7,11 @@
   flex-direction: column;
   justify-content: "center";
   align-items: "flex-start";
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: white;
+  max-width: 250px;
+  z-index: 9999999999999999;
 }
