--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,3 @@
-
-
-body {
-  background-color: $primary-color;
-  font-family: sans-serif;
-  padding: 15px;
-  min-width: 300px;
-}
-
-h1 {
-  font-size: 18px;
+.ImgWithoutAlt {
+  border: 10px solid red !important;
 }
